# combinatorial-algorithms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
lab-1/: description.md
lab-2/: description.md  staff.cpp
lab-3/: CMakeLists.txt  description.md  start.cpp
lab-3/class-graph/: graph.cpp  graph.h
lab-3/tests/: CMakeLists.txt  unit-test.cpp
lab-4/: CMakeLists.txt  Segment.h  description.md  descriptions.md  main.cpp
lab-4/class-graph/: Graph.cpp  Graph.h
lab-4/class-lay/: Lay.cpp  Lay.h
lab-4/tests/: CMakeLists.txt  unit-test.cpp
lab-5/: CMakeLists.txt  description.md  main.cpp  start
lab-5/class-chrono/: Timer.cpp  Timer.h
lab-5/class-genetic/: Genetic.cpp  Genetic.h  genetic.cpp  genetic.h
lab-5/class-greedy/: Greedy.cpp  Greedy.h
lab-6/: CMakeLists.txt  README.md  constants.h  description.md  example.cpp  example.h  main.cpp
lab-6/class-aco/: aco.cpp  aco.h
lab-6/class-ant/: ant.cpp  ant.h
lab-6/class-graph/: graph.cpp  graph.h  matrix.cpp  matrix.h
labs/: description.md  input.txt  lab-1.cpp
labs/2-lab/: staff.cpp
labs/3-lab/: description.md  main.cpp
lections/: basic-combinatorial-principles.md
presentations/: 03-classes-difficulties.pptx  04-the-main-definitions-and-the-properties-of-the-graphs.pptx  05-oriented-graphs.pptx  06-eulerian-and-hamiltonian-graphs.pptx  09-graph-coloring.pptx  11-number-of-spanning-trees.pptx  12-search-for-maximum-flow.pptx  13-matching-phrases.pptx  14-petri-nets.pptx  15-ant-algorithms.pptx  16-genetic-algorithms.pptx  planar-graphs-and-stacking.pptx
test/: data.txt
(+7 files in other folders)
